[package]
name = "publisher-caps"
version = "1.0.0"
description = "Created with Anchor"
edition = "2018"

[features]
mock-clock = []
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]

[lib]
crate-type = ["cdylib", "lib"]
name = "publisher_caps"

[dependencies]
anchor-lang = {workspace = true, features = ["init-if-needed"]}
bytemuck = {version = "1.4.0", features = ["derive", "min_const_generics"]}
pythnet-sdk = {path= "../../../../pyth-crosschain/pythnet/pythnet_sdk/", features = ["solana-program"]}
wormhole-solana-vaas = {version="0.3.0-alpha.1", features = ["anchor", "encoded-vaa", "mainnet"]}
