[package]
name = "publisher-caps"
version = "1.0.0"
description = "Created with Anchor"
edition = "2018"

[features]
mock-clock = []
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]

[lib]
crate-type = ["cdylib", "lib"]
name = "publisher_caps"

[dependencies]
anchor-lang = {workspace = true, features = ["init-if-needed"]}
arrayref = "0.3.8"
bytemuck = {version = "1.4.0", features = ["derive", "min_const_generics"]}
pythnet-sdk = {git= "https://github.com/pyth-network/pyth-crosschain.git", branch = "feat/publisher-caps-program" , features = ["solana-program"]}
wormhole-solana-vaas = {version="0.3.0-alpha.1", features = ["anchor", "encoded-vaa", "mainnet"]}
