[package]
name = "pyth-staking-program"
version = "1.0.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
mock-clock = []
wasm = ["no-entrypoint", "js-sys", "bincode"]
default = []

[dependencies]
borsh = {version = "0.9.3", features = ["const-generics"]}
anchor-lang = {version ="0.26.0", features = ["init-if-needed"]}
anchor-spl = "0.26.0"
wasm-bindgen = "0.2.79"
spl-governance = {version = "3.1.1", features = ["no-entrypoint"]}
js-sys = { version = "0.3.56", optional = true }
bincode = { version = "1.3.3", optional = true }
solana-program = {version = "~1.14"}

[dev-dependencies]
rand = "0.8.5"
quickcheck = "1"
quickcheck_macros = "1"
