[package]
name = "pyth-staking-program"
version = "2.0.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
mock-clock = []
wasm = ["no-entrypoint", "js-sys", "bincode"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {workspace = true, features = ["init-if-needed"]}
anchor-spl = {workspace = true}
wasm-bindgen = "0.2.79"
spl-governance = {version = "4.0.0", features = ["no-entrypoint"]}
js-sys = { version = "0.3.56", optional = true }
bincode = { version = "1.3.3", optional = true }
solana-program = { workspace = true }
bytemuck = {version = "1.4.0", features = ["derive", "min_const_generics"]}
ahash = "=0.8.11"
arrayref = "0.3.8"

[dev-dependencies]
rand = "0.8.5"
quickcheck = "1"
quickcheck_macros = "1"
